--- a/style.css
+++ b/style.css
@@ -320,11 +320,15 @@ ul {
 #summary_vehicle {
     position: absolute;
     left: 15px;
-    bottom: 300px;
+    bottom: 200px;
+    width: 90%;
+
+    border-width: 2px;
+    border-style: hidden hidden solid hidden;
 }
 
 #summary_vehicle_current {
     position: absolute;
     left: 20px;
-    bottom: 280px;
+    bottom: 175px;
 }
