the filters work but when you select num seats it removed cars from the rendered list so changing the filter doesnt add them back need to do it some other way

--- a/style.css
+++ b/style.css
@@ -341,7 +341,18 @@ ul {
 #price_filters {
     display: flex;
     flex-direction: column; /* Stack items vertically */
-    
+    margin-bottom: 20px; /* Adds space below this section */   
+}
+#vehicle_type_filters {
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+    margin-bottom: 20px; /* Adds space below this section */   
 }
 
+
+#vehicle_option_filters  {
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+    margin-bottom: 20px; /* Adds space below this section */   
+}
 
