fixed filter css

--- a/style.css
+++ b/style.css
@@ -349,15 +349,14 @@ ul {
 
 #price_filters {
     display: flex;
-    flex-direction: column; /* Stack items vertically /
-    margin-bottom: 20px; /* Adds space below this section */
+    flex-direction: column;
+    margin-bottom: 20px; 
 }
 #vehicle_type_filters {
     display: flex;
     flex-direction: column; 
     margin-bottom: 20px; 
 }
-
 
 #vehicle_option_filters  {
     display: flex;
