--- a/style.css
+++ b/style.css
@@ -415,7 +415,9 @@ ul {
     display: inline-block;
     font-size: 30px;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-    position: relative;
+    position: absolute;
+    left: 10px;
+    right: 10px;
     bottom: 10px;
 
     border: none;
