--- a/styles/style-landing.css
+++ b/styles/style-landing.css
@@ -15,16 +15,49 @@ body {
 
 /* Header/logo Title */
 .locationdatetime_form {
-  padding: 80px;
+  padding: 5vh 5vw;
   text-align: center;
   background: #d66d27;
   color: white;
+  min-height: 60vh;
 }
 
 /* Increase the font size of the heading */
 .locationdatetime_form h1 {
   font-size: 40px;
 }
+
+.datetime-selectors {
+  background-color: red;
+  min-width: 75vw;
+  height: 75px;
+}
+
+.datetime-selectors_list {
+  width: 100%;
+  height: 100%;
+  display: flex; 
+  flex-direction:row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  list-style: none;
+  padding-left: 0;  
+  
+}
+
+.datetime-selectors_list li{
+  display: block;
+  background-color: rgb(127, 155, 155);
+  min-width: 300px;
+  width: 33.333%;
+  border: 1px solid black;
+}
+
+.submit-button {
+  background-color: antiquewhite;
+}
+
+
 
 /* Column container */
 .container {  
@@ -44,4 +77,28 @@ body {
   flex: 70%;
   background-color: white;
   padding: 20px;
+}
+
+@media screen and (max-width: 1000px) {
+
+  .datetime-selectors {
+    background-color: red;
+    min-width: 75vw;
+    height: 150px;
+  }
+
+  .datetime-selectors_list {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .datetime-selectors_list li{
+    height:50px;
+    width: 100%;
+    background-color: aqua;
+  }
+
+  .locationdatetime_form {
+    padding: 5vh 0;
+  }
 }
