--- a/styles/style-landing.css
+++ b/styles/style-landing.css
@@ -57,7 +57,13 @@ body {
   background-color: antiquewhite;
 }
 
-
+.form-control.input {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 100%;
+  font-size: 1.5rem;
+  text-align: center;
+}
 
 /* Column container */
 .container {  
