--- a/style.css
+++ b/style.css
@@ -433,6 +433,28 @@ ul {
     background-color: #4CAF50;
 }
 
+.resetfiltersbtn {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 30px;
+    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+    position: absolute;
+
+    bottom: 100px;
+
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.resetfiltersbtn:hover {
+    background-color: #4CAF50;
+}
+
 
 #insurance_scroll {
     display: none; /* Hide by default; show via JavaScript */
