--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #main {
-    background-color: #DAD4B5;
+    background-color: white;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -172,7 +172,7 @@ body {
 }
 
 .book_button {
-    background-color: #DAD4B5;
+    background-color: #800000;
     border: none;
     color: #800000;
     padding: 15px 32px;
