--- a/styles/style-landing.css
+++ b/styles/style-landing.css
@@ -34,6 +34,12 @@ body {
   height: 100px;
   box-shadow: 0px 20px 5px 5px rgba(0, 0, 0, 0.253);
   margin-bottom: 100px;
+
+  
+}
+
+#locations:invalid{
+  color:#33333388;
 }
 
 .datetime-selectors_list {
@@ -62,7 +68,7 @@ body {
 
   text-align: center;
   font-size: 1.5rem;
-  color: #33333388;
+  color: #333;
 }
 
 .submit-button {
