--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 }
 
 body {
-    font: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 #header_progress {
