--- a/style.css
+++ b/style.css
@@ -390,12 +390,16 @@ ul {
 }
 
 .dropbtn {
-    background-color: brown;
+    background-color: #333;
     color: white;
-    padding: 18px;
+    padding: 5px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    width: 100%;
+    border-radius: 5px;
+    min-height: 2rem;
+    max-height: 3rem;
 }
 
 .dropbtn:hover {
