--- a/review-style.css
+++ b/review-style.css
@@ -16,7 +16,8 @@
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    max-width: 500px;
+    height: 30%;
+    max-width: 5000px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
   }
