--- a/style.css
+++ b/style.css
@@ -315,7 +315,6 @@ ul {
     display: inline-block;
     vertical-align: top;
     position: relative;
-
     width: 15vw;
     height: 650px;
     padding: 20px;
@@ -390,7 +389,7 @@ ul {
 }
 
 .dropbtn {
-    background-color: #333;
+    background-color: #888888;
     color: white;
     padding: 5px;
     font-size: 16px;
@@ -398,9 +397,11 @@ ul {
     cursor: pointer;
     width: 100%;
     border-radius: 5px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     min-height: 2rem;
     max-height: 3rem;
-}
+} 
 
 .dropbtn:hover {
     background-color: #333;
@@ -412,8 +413,10 @@ ul {
 }
 
 .dropdown-content {
+    padding-top: 5px;
     display: block;
     position: relative;
+    background-color: #f1f1f1;
 }
 
 .show {
@@ -424,19 +427,21 @@ ul {
     background-color: brown;
     color: white;
     border: none;
-    padding: 15px 32px;
     text-align: center;
-    display: inline-block;
-    font-size: 30px;
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-    position: absolute;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+    box-shadow: 3px 3px 10px 0px rgba(0,0,0,0.25);
+    bottom: 80px;
     border: none;
-    border-radius: 15px;
+    border-radius: 5px;
     cursor: pointer;
+    width: 86%;
+    padding-top: 0.5rem;
+    min-height: 3rem;
+    max-height: 3rem;
+    margin-top: 10px;
+    position: absolute;
 }
 
 .applyfiltersbtn:hover {
@@ -444,21 +449,22 @@ ul {
 }
 
 .resetfiltersbtn {
-    background-color: brown;
+    background-color: #888888;
     color: white;
     border: none;
-    padding: 15px 32px;
     text-align: center;
     display: inline-block;
-    font-size: 30px;
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-    position: absolute;
-
-    bottom: 100px;
-
+    font-size: 24px;
+    box-shadow: 3px 3px 10px 0px rgba(0,0,0,0.25);
+    bottom: 20px;
     border: none;
-    border-radius: 15px;
+    border-radius: 5px;
     cursor: pointer;
+    width: 86%;
+    min-height: 2rem;
+    max-height: 3rem;
+    margin-top: 10px;
+    position: absolute;
 }
 
 .resetfiltersbtn:hover {
@@ -566,7 +572,7 @@ ul {
     margin-bottom: 10px;
 }
 .checkout-button {
-    background-color: brown; 
+    background-color: #e95555; 
     color: white; 
     font-size: 20px; 
     font-weight: bold; 
