--- a/style.css
+++ b/style.css
@@ -94,7 +94,6 @@ body {
 #vehicle_scroll {
     display: inline-block;
     width: 60%;
-    max-width: 60%;
     height: 650px;
     padding: 10px;
     text-align: center;
@@ -332,13 +331,17 @@ ul {
     width: 15vw;
     height: 650px;
     margin-right: 20px; 
-    padding: 20px;
+    padding: 20px 10px;
     margin-left: 20px;
+
+    font-size: 12;
 
     border-radius: 25px;
     border-width: 2px;
     border-style: solid;
     border-color: #800000;
+
+    overflow: scroll;
 
     display: flex; 
     flex-direction: column; 
@@ -349,10 +352,11 @@ ul {
     display: inline-block;
     vertical-align: top;
     margin: 0;
-    width: 90%;
-
+    width: 100%;
     border-width: 2px;
     border-style: hidden hidden solid hidden;
+    color: #333;
+    border-color: #888888;
 }
 
 #summary_vehicle_total {
@@ -360,6 +364,7 @@ ul {
     text-align: left; 
     border-width: 2px;
     border-style: hidden hidden solid hidden;
+    border-color: #888888;
 }
 
 #summary_vehicle_current {
@@ -532,18 +537,21 @@ ul {
     background-color: #333;
 }
 
+#summary_div h2 {
+    text-align: center;
+}
 
 #summary_info_div {
     display: flex; 
     flex-direction: column; 
     gap: 20px; 
-    margin: 20px;
+    margin: 3px;
     padding: 10px;
 }
 
 #vehicle_div, #insurance_div, #addon_div {
     border-radius: 8px; 
-    padding: 15px; 
+    padding: 0px; 
 }
 
 
@@ -551,22 +559,41 @@ ul {
     content: "Vehicles";
     font-weight: bold;
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    color: #333;
 }
+
+
 
 #insurance_div::before {
     content: "Insurance";
     font-weight: bold;
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    color: #333;
 }
+
+
 
 #addon_div::before {
     content: "Add-ons";
     font-weight: bold;
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    color: #333;
 }
+
+#vehicle_div h4, #insurance_div h4, #addon_div h4 {
+    color: #888888;
+    margin-top: 0px;
+    margin-bottom: 4px;
+}
+
+#summary_div hr {
+    width: 90%;
+    float: left;
+}
+
 .checkout-button {
     background-color: #e95555; 
     color: white; 
