--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ ul {
 
 #total_container {
     display: flex;
-    margin: auto;
+    margin-top: auto;
     width: 100%;
     border-style: hidden hidden solid hidden;
     border-color: #888888;
