--- a/styles/style-landing.css
+++ b/styles/style-landing.css
@@ -63,7 +63,7 @@ body {
 .locations {
   height:100%;
   width:100%;
-  border-radius: 0;
+  border-radius: 8px;
   background-color: white;
 
   text-align: center;
