--- a/style.css
+++ b/style.css
@@ -143,16 +143,13 @@ body {
 
 #vehicle_item {
     min-width: 525px;
-    height: 500px;
     display: inline-block;
     margin: 15px;
     position: relative;
     padding-left: 10px;
+    padding-bottom: 10px;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
-
     transition: 0.25s;
-
-    
     border: 2px solid #ccc;
     border-radius: 12px;
     box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.2);
@@ -187,13 +184,14 @@ body {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 40px;
+    font-size: 30px;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
 
     position: absolute;
     bottom: 10px;
-    left: 10px;
     right: 10px;
+
+    width:50%;
 
     border-radius: 13px;
     border-color: #800000;
@@ -249,10 +247,9 @@ body {
     max-height:50px;
     margin-left: 315px;
     margin-right: 15px;
-    margin-top: 10px;
+    margin-top: 30px;
     font-size: 40px;
     position:absolute;
-    top: 69%;
 }
 
 #additional_features {
