--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ body {
     border: 2px solid #ccc;
     border-radius: 12px;
     box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.2);
+    height:400px;
 }
 
 #vehicle_date {
